# autiobooks

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  autiobooks.py  docker-compose.yml  engine.py  pyproject.toml  setup.py  voices.py  voices_lang.py
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: ci.yml  pip-install.yaml
autiobooks/: __main__.py  __main_entry__.py  autiobooks.py  batch_window.py  chapter_tree.py  cli.py  config.py  dialogs.py  engine.py  epub_parser.py  pdf_parser.py  runtime.py  text_processing.py  theme.py  voices_lang.py
autiobooks/hooks/: pyi_rth_torch.py
autiobooks/misaki/: en.py
autiobooks/misaki/g2pkc/: table.csv
books/: Docker_epub_location.txt
scripts/: audit_heteronyms.py  audit_pronunciations.py  sample_overrides.json
tests/: test_cli.py  test_text_processing.py
windows/: autiobooks-cuda.spec  autiobooks.spec  build-cuda.bat  build.bat  requirements-pinned-cpu.txt  requirements-pinned-cuda.txt  venv312_cuda_packages.txt  venv312_packages.txt
